Working on book page JS

--- a/public/book/index.html
+++ b/public/book/index.html
@@ -236,94 +236,71 @@
         </div>
     </div>
 </div>
-<div class="section related-books mt-5 ">
+<div class="section bottom">
+    <div class="related-books mt-5 ">
 
-    <svg class="head" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 184.73 368.45">
-        <defs>
-            <style>.cls-1 {
-                fill: #d4145a;
-                stroke: #d4145a;
-                stroke-miterlimit: 10;
-            }</style>
-        </defs>
-        <title>testa_suggestion_bg</title>
-        <g id="Livello_2" data-name="Livello 2">
-            <g id="back">
-                <path class="cls-1" d="M184.23,368C82.76,368,.5,285.69.5,184.23h0A183.73,183.73,0,0,1,184.23.5Z"/>
+        <svg class="head" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 184.73 368.45">
+            <defs>
+                <style>.cls-1 {
+                    fill: #d4145a;
+                    stroke: #d4145a;
+                    stroke-miterlimit: 10;
+                }</style>
+            </defs>
+            <title>testa_suggestion_bg</title>
+            <g id="Livello_2" data-name="Livello 2">
+                <g id="back">
+                    <path class="cls-1" d="M184.23,368C82.76,368,.5,285.69.5,184.23h0A183.73,183.73,0,0,1,184.23.5Z"/>
+                </g>
             </g>
-        </g>
-    </svg>
-    <svg preserveAspectRatio="none" class="tail" xmlns="http://www.w3.org/2000/svg"
-         xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1609.94 367.45">
-        <defs>
-            <style>.cls-1 {
-                fill: url(#Sfumatura_senza_nome_5);
-            }</style>
-            <linearGradient id="Sfumatura_senza_nome_5" x1="311.59" y1="10913.69" x2="1825.43" y2="10913.69"
-                            gradientTransform="matrix(0.64, 0.71, -0.64, 0.71, 7124.72, -8288.96)"
-                            gradientUnits="userSpaceOnUse">
-                <stop offset="0" stop-color="#d5085a"/>
-                <stop offset="0.18" stop-color="#d6075c"/>
-                <stop offset="1" stop-color="#ac2428"/>
-            </linearGradient>
-        </defs>
-        <title>corpo_suggestion_bg</title>
-        <g id="Livello_2" data-name="Livello 2">
-            <g id="back">
-                <rect class="cls-1" width="1609.94" height="367.45"/>
+        </svg>
+        <svg preserveAspectRatio="none" class="tail" xmlns="http://www.w3.org/2000/svg"
+             xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1609.94 367.45">
+            <defs>
+                <style>.cls-1 {
+                    fill: url(#Sfumatura_senza_nome_5);
+                }</style>
+                <linearGradient id="Sfumatura_senza_nome_5" x1="311.59" y1="10913.69" x2="1825.43" y2="10913.69"
+                                gradientTransform="matrix(0.64, 0.71, -0.64, 0.71, 7124.72, -8288.96)"
+                                gradientUnits="userSpaceOnUse">
+                    <stop offset="0" stop-color="#d5085a"/>
+                    <stop offset="0.18" stop-color="#d6075c"/>
+                    <stop offset="1" stop-color="#ac2428"/>
+                </linearGradient>
+            </defs>
+            <title>corpo_suggestion_bg</title>
+            <g id="Livello_2" data-name="Livello 2">
+                <g id="back">
+                    <rect class="cls-1" width="1609.94" height="367.45"/>
+                </g>
             </g>
-        </g>
-    </svg>
-    <div class="container-fluid">
-        <div class="row m-0 p-0">
-            <div class="col-12 m-0 p-0 col-lg-3 d-flex flex-column justify-content-center">
-                <h2 class="text-white d-none d-lg-block">
-                    We think you will also love this
-                </h2>
-                <div class="container d-block d-lg-none mt-4">
-                    <h4 class="text-white">
+        </svg>
+        <div class="container-fluid">
+            <div class="row m-0 p-0">
+                <div class="col-12 m-0 p-0 col-lg-3 d-flex flex-column justify-content-center">
+                    <h2 class="text-white d-none d-lg-block">
                         We think you will also love this
-                    </h4>
-                </div>
-            </div>
-            <div class="col-12 m-0 p-0 col-lg-9">
-                <div class="related-container my-4 my-lg-0"></div>
-            </div>
-            <div class="col-12 m-0 p-0 d-block d-md-none text-center">
-                <h6 class="text-white mb-4">Book title</h6>
-            </div>
-        </div>
-
-    </div>
-</div>
-<div class="section book-reviews bg-dark vh-100">
-    <div class="container text-white">
-        <h3>Reviews (<span class="book-rating-qty">0</span>)</h3>
-        <div class="d-flex flex-column justify-content-start mt-5">
-            <div class="review border border-pink rounded-bobooky p-4">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12 col-md-3 d-flex flex-column justify-content-start">
-                            <h5 class="author">Author</h5>
-                            <div class="text-light rating mt-1">
-                                <div class="icons d-inline">
-                                    <i class="fa fa-bookmark text-pink"></i>
-                                    <i class="fa fa-bookmark text-pink"></i>
-                                    <i class="fa fa-bookmark text-pink"></i>
-                                    <i class="fa fa-bookmark-o text-pink"></i>
-                                    <i class="fa fa-bookmark-o text-pink"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-9 d-flex flex-column justify-content-start">
-                            <h5 class="title">Title</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
-                                nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
-                                enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-                                nisl ut aliquipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet </p>
-                        </div>
+                    </h2>
+                    <div class="container d-block d-lg-none mt-4">
+                        <h4 class="text-white">
+                            We think you will also love this
+                        </h4>
                     </div>
                 </div>
+                <div class="col-12 m-0 p-0 col-lg-9">
+                    <div class="related-container my-4 my-lg-0"></div>
+                </div>
+                <div class="col-12 m-0 p-0 d-block d-md-none text-center">
+                    <h6 class="text-white mb-4">Book title</h6>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="book-reviews bg-dark vh-100">
+        <div class="container text-white">
+            <h3>Reviews (<span class="book-rating-qty">0</span>)</h3>
+            <div class="d-flex flex-column justify-content-start mt-5">
             </div>
         </div>
     </div>
