Working on book page JS

--- a/public/book/index.html
+++ b/public/book/index.html
@@ -300,7 +300,7 @@
     <div class="book-reviews bg-dark vh-100">
         <div class="container text-white">
             <h3>Reviews (<span class="book-rating-qty">0</span>)</h3>
-            <div class="d-flex flex-column justify-content-start mt-5">
+            <div class="book-reviews-container d-flex flex-column justify-content-start mt-5">
             </div>
         </div>
     </div>
