--- a/public/profile/account/address/new/index.html
+++ b/public/profile/account/address/new/index.html
@@ -11,27 +11,6 @@
     <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
 
-    <style>
-        .form-group {
-            position: relative;
-            margin-bottom: 2rem;
-        }
-
-        .form-control-placeholder {
-            position: absolute;
-            top: 0;
-            transition: all 200ms;
-            opacity: 0.5;
-        }
-
-        .form-control:focus + .form-control-placeholder,
-        .form-control:valid + .form-control-placeholder {
-            font-size: 75%;
-            transform: translate3d(0, -100%, 0);
-            opacity: 1;
-        }
-
-    </style>
 
 </head>
 
@@ -52,7 +31,7 @@
                             <div class="form-group col-12 col-md-5 mr-auto">
                                 <input type="text" name="name" class="form-control bobooky text-secondary"
                                        id="inputName" required>
-                                <label class="col-form-label-md form-control-placeholder form-control-placeholder"
+                                <label class="col-form-label-md form-control-placeholder"
                                        for="inputName">Name</label>
                                 <div class="invalid-feedback">
                                     Name cannot be empty.
