--- a/public/profile/register/index.html
+++ b/public/profile/register/index.html
@@ -22,21 +22,21 @@
         <div class="col-12 mt-5">
             <h2 class="font-weight-bold text-warning ml-3 mt-5 mb-4">Welcome!</h2>
             <div class="container" style="border-width: 2px !important;">
-                <form class="needs-validation form-yellow" id="register-form" novalidate>
+                <form class="needs-validation form-warning" id="register-form" novalidate>
                     <div class="form-row">
                         <div class="form-group col-12 col-md-5 mr-4">
-                            <label class="col-form-label-md" for="inputName">Name</label>
-                            <input type="text" class="form-control bobooky text-warning" name="name" id="inputName" placeholder=" "
+                            <input type="text" class="form-control bobooky text-warning" name="name" id="inputName"
                                    required>
+                            <label class="col-form-label-md form-control-placeholder" for="inputName">Name</label>
                             <div class="invalid-feedback">
                                 Please insert a valid name.
                             </div>
                         </div>
 
                             <div class="form-group col-12 col-md-5">
-                            <label class="col-form-label-md" for="inputSurname">Surname</label>
                             <input type="text" class="form-control bobooky text-warning" name="surname" id="inputSurname"
-                                   placeholder=" " required>
+                                   required>
+                                <label class="col-form-label-md form-control-placeholder" for="inputSurname">Surname</label>
                             <div class="invalid-feedback">
                                 Please insert a valid surname.
                             </div>
@@ -49,9 +49,9 @@
                         -->
 
                         <div class="dates form-group col-12 col-md-5 mt-md-3">
-                            <label class="col-form-label-md" for="usr1">Birth date</label>
                             <input type="text" class="form-control bobooky text-warning" name="birthdate" id="usr1" name="event_date"
-                                   placeholder="yyyy-mm-dd" autocomplete="off" required>
+                                    autocomplete="off" required>
+                            <label class="col-form-label-md form-control-placeholder" for="usr1">Birth date</label>
                         </div>
                         <div class="invalid-feedback">
                             Please choose a valid date.
@@ -61,10 +61,9 @@
                     <h2 class="font-weight-bold mt-5 mb-4 text-warning">Which is your...</h2>
                     <div class="form-row">
                         <div class="form-group col-12 col-md-5">
-                            <label class="col-form-label-md" for="inputEmail">Email</label>
                             <input type="email" class="form-control bobooky text-warning" name="email" id="inputEmail"
-                                   placeholder=" "
                                    required>
+                            <label class="col-form-label-md form-control-placeholder" for="inputEmail">Email</label>
                             <div class="invalid-feedback">
                                 Please insert a valid email.
                             </div>
@@ -73,9 +72,9 @@
                     </div>
                     <div class="form-row mt-md-3">
                         <div class="form-group col-12 col-md-5 mr-4">
-                            <label class="col-form-label-md" for="inputPassword">Password</label>
                             <input type="password" class="form-control bobooky text-warning" name="password" id="inputPassword"
-                                   placeholder="********" required>
+                                   required>
+                            <label class="col-form-label-md form-control-placeholder" for="inputPassword">Password</label>
                             <small id="passwordHelpBlock" class="form-text text-muted">
                                 Your password must be 8-20 characters long
                             </small>
@@ -84,10 +83,10 @@
                             </div>
                         </div>
                         <div class="form-group col-12 col-md-5">
-                            <label class="col-form-label-md" for="inputPasswordRepeated">Can you repeat it,
-                                please?</label>
                             <input type="password" class="form-control bobooky text-warning" id="inputPasswordRepeated"
-                                   placeholder="********" required>
+                                   required>
+                            <label class="col-form-label-md form-control-placeholder" for="inputPasswordRepeated">Can you repeat it,
+                                please?</label>
                             <div class="invalid-feedback">
                                 Please repeat the password.
                             </div>
@@ -111,8 +110,6 @@
 <script src="/jquery/dist/jquery.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
-<script src="/index.js" type="module"></script>
-<script src="/components/carousel/carousel.js" type="module"></script>
 <script src="register.js" type="module"></script>
 <script src="calendar.js" type="module"></script>
 
