--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
-    <link rel="stylesheet" href="/profile/register/scss/calendar.css">
+    <link rel="stylesheet" href="/profile/cart/scss/cart.css">
 
 </head>
 
@@ -18,7 +18,7 @@
 <div class="nav-placeholder"></div>
 <div class="container-fluid bg-primary px-0">
     <div class="container h-100">
-        <h5 class="text-white font-weight-bold py-3">Shopping cart</h5>
+        <h5 class="text-white my-auto font-weight-bold py-3">Shopping cart</h5>
     </div>
 </div>
 <div class="container h-100">
@@ -27,11 +27,11 @@
     </h6>
 </div>
 
-<div class="fixed-bottom vw-100 border-top border-dark d-block d-md-none">
+<div class="fixed-bottom vw-100 shadow d-block d-md-none">
     <div class="container">
-        <div class="row">
-            <div class="col-9">
-                <div class="container p-0">
+        <div class="row bg-white">
+            <div class="col-7 mt-2">
+                <div class="container">
                     <div class="row">
                         <h6>Total (5 books):</h6>
                     </div>
@@ -40,48 +40,49 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3">
-                <button class="btn btn-primary my-2">Buy now</button>
+            <div class="col-5 my-auto">
+                <button class="btn btn-primary rounded-pill float-right">Buy now</button>
             </div>
         </div>
     </div>
 </div>
+
 <div class="container shopping-cart">
     <div class="row">
         <div class="col shopping-cart-container"></div>
-        <div class="col-3 d-none d-md-block">
-            <div class="container bg-dark rounded w-100 text-white text-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="col"><h3>Summary</h3></div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-6"><h5>Subtotal:</h5></div>
-                        <div class="col-6 summary-subtotal">€ 45.00</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-6"><h5>delivery:</h5></div>
-                        <div class="col-6 summary-delivery">€ 45.00</div>
-                    </div>
-                </div>
-                <div class="container mt-3">
-                    <div class="row border-top">
-                        <div class="col-6"><h5>Total:</h5></div>
-                        <div class="col-6 summary-total">€ 45.00</div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <button class="btn btn-primary">Buy now</button>
+        <div class="col-3 d-none d-md-block p-0"> <!-- Summary fixed section-->
+            <div class="container bg-dark rounded-bobooky summary-container text-white text-center">
+                <div class="col h-75 mx-0 px-0">
+                    <div class="row h-100 align-content-between justify-content-center">
+                        <div class="container">
+                            <div class="row mt-5">
+                                <div class="col"><h3>Summary</h3></div>
+                            </div>
                         </div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-6"><h5>Subtotal:</h5></div>
+                                <div class="col-6 summary-subtotal">€ 45.00</div>
+                            </div>
+                        </div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-6"><h5>Delivery:</h5></div>
+                                <div class="col-6 summary-delivery">€ 45.00</div>
+                            </div>
+                        </div>
+                        <div class="col-10 border-bottom"></div>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-6"><h5>Total:</h5></div>
+                                <div class="col-6 title font-weight-bold summary-total">€ 45.00</div>
+                            </div>
+                       </div>
                     </div>
                 </div>
-
+                <div class="d-flex flex-column h-25">
+                    <button class="btn btn-primary align-self-end mt-auto mb-4 w-100 rounded-pill" >Buy now</button>
+                </div>
             </div>
         </div>
     </div>
