--- a/public/book/index.html
+++ b/public/book/index.html
@@ -26,7 +26,7 @@
         </ol>
     </div>
 </nav>
-<div class="section top mt-5" style="display: none">
+<div class="section top mt-5">
     <div class="container">
         <div class="row">
             <div class="col-12 d-block d-md-none">
