--- a/public/book/index.html
+++ b/public/book/index.html
@@ -27,7 +27,7 @@ Loading template
 </div>
 
 <div class="fixed-bottom vw-100 shadow d-block d-md-none">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row bg-white">
             <div class="col">
                 <div class="row py-3">
@@ -37,18 +37,16 @@ Loading template
                     <div class="col-auto">
                         <div class="input-group input-group">
                             <div class="input-group-prepend">
-                                <button class="btn btn-outline-pink dropdown-toggle" type="button"
-                                        data-toggle="dropdown">1
-                                </button>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">2</a>
-                                    <a class="dropdown-item" href="#">3</a>
-                                    <a class="dropdown-item" href="#">4</a>
-                                    <a class="dropdown-item" href="#">5</a>
-                                </div>
+                                <select class="custom-select cart-qty">
+                                    <option selected value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                </select>
                             </div>
                             <div class="input-group-append">
-                                <button class="btn btn-pink" type="button">Add</button>
+                                <button class="btn btn-pink cart-add" type="button">Add</button>
                             </div>
                             <div class="input-group-append">
                                 <button class="btn btn-pink text-white wishlist" type="button">
