Finished author page

--- a/public/book/index.html
+++ b/public/book/index.html
@@ -79,12 +79,16 @@ Loading template
                     <h1 class="text-dark book-title">Book title</h1>
                 </div>
                 <div>
-                    <h3 class="text-pink book-author text-capitalize">Author name</h3>
+                    <a href="#" class="book-author-href text-decoration-none">
+                        <h3 class="text-pink book-author text-capitalize">
+                            Author name
+                        </h3>
+                    </a>
                 </div>
                 <div class="text-gray book-genres text-capitalize mt-4">
                     Horror / Fantasy
                 </div>
-                <div class="text-light book-rating mt-1">
+                <div class="text-light text-pink book-rating mt-1">
                     <div class="ml-2 text-gray d-inline">
                         <span class="book-rating-val">0</span>/5, <span class="book-rating-qty">0</span> reviews
                     </div>
@@ -191,12 +195,15 @@ Loading template
                     <h1 class="text-dark book-title text-capitalize">Book title</h1>
                 </div>
                 <div>
-                    <h3 class="text-pink book-author text-capitalize">Author name</h3>
-                </div>
+                    <a href="#" class="book-author-href text-decoration-none">
+                        <h3 class="text-pink book-author text-capitalize">
+                            Author name
+                        </h3>
+                    </a>                </div>
                 <div class="text-gray book-genres mt-4 text-capitalize">
                     Horror / Fantasy
                 </div>
-                <div class="text-light book-rating mt-1">
+                <div class="text-light text-pink book-rating mt-1">
                     <div class="ml-2 text-gray d-inline">
                         <span class="book-rating-val">0</span>/5,
                         <span class="book-rating-qty"> 0</span> reviews
@@ -327,13 +334,13 @@ Loading template
     <div class="book-reviews bg-dark vh-100">
         <div class="container text-white">
 
-                <h3 class="d-inline">Reviews (<span class="book-rating-qty">0</span>)</h3>
-                <div class=" ml-4 book-rating d-inline"></div>
+            <h3 class="d-inline">Reviews (<span class="book-rating-qty">0</span>)</h3>
+            <div class="text-pink ml-4 book-rating d-inline"></div>
 
-        <div class="book-reviews-container d-flex flex-column justify-content-start mt-5">
+            <div class="book-reviews-container d-flex flex-column justify-content-start mt-5">
+            </div>
         </div>
     </div>
-</div>
 </div>
 
 <script src="/lib/jquery/dist/jquery.js"></script>
