--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
                 <h3>What are you looking for?</h3>
                 <div class=" form-group border-white mt-3 search-bar">
                     <div class="input-group input-group-lg">
-                        <input type="text" class="form-control pl-4 text-light"
+                        <input type="text" class="search-query form-control pl-4 text-light"
                                placeholder="Search more than 700 books">
                         <div class="input-group-append">
-                            <button class="btn round btn-outline-dark" type="button">
+                            <button class="btn search-button round btn-outline-dark" type="button">
                                 <i class="fa fa-search text-white"></i>
                             </button>
                         </div>
