--- a/public/book/index.html
+++ b/public/book/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="/components/loading/loading.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
     <link rel="stylesheet" href="book.css">
-    <link rel="stylesheet" href="/components/animated-heart/animated-heart.css">
-
 
 </head>
 
@@ -35,9 +33,9 @@ Loading template
                         <h3 class="m-0 p-0"><span class="book-price font-weight-bold">00,00</span> €</h3>
                     </div>
                     <div class="col-auto">
-                        <div class="input-group input-group">
+                        <div class="input-group input-group-lg">
                             <div class="input-group-prepend">
-                                <select class="custom-select cart-qty">
+                                <select class="custom-select custom-select-lg cart-qty">
                                     <option selected value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
