Added wishlist add/remove in search results

--- a/public/book/index.html
+++ b/public/book/index.html
@@ -47,7 +47,7 @@ Loading template
                                 <button class="btn btn-pink cart-add" type="button">Add</button>
                             </div>
                             <div class="input-group-append">
-                                <button class="btn btn-pink text-white wishlist" type="button">
+                                <button class="d-inline btn rounded-circle btn-outline-pink btn-sm wishlist" type="button">
                                     <i class="fa fa-heart-o"></i>
                                 </button>
                             </div>
@@ -231,7 +231,7 @@ Loading template
                         or
                     </div>
                     <div class="text-gray d-flex flex-column justify-content-center h-100" style="width: 2rem">
-                        <button class="btn btn-pink btn-sm text-white wishlist" type="button">
+                        <button class="d-inline btn rounded-circle btn-outline-pink btn-sm wishlist" type="button">
                             <i class="fa fa-heart-o"></i>
                         </button>
                     </div>
