--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -18,7 +18,7 @@
 <div class="nav-placeholder"></div>
 <div class="container-fluid bg-primary px-0">
     <div class="container h-100">
-        <h5 class="text-white my-auto font-weight-bold py-3">Shopping cart</h5>
+        <h5 class="text-white my-auto title py-3">Shopping cart</h5>
     </div>
 </div>
 <div class="container h-100">
@@ -27,13 +27,13 @@
     </h6>
 </div>
 
-<div class="fixed-bottom vw-100 shadow d-block d-md-none">
+<div class="fixed-bottom vw-100 shadow d-block d-lg-none">
     <div class="container">
         <div class="row bg-white">
             <div class="col-7 mt-2">
                 <div class="container">
                     <div class="row">
-                        <h6>Total (5 books):</h6>
+                        <h6>Subtotal + delivery:</h6>
                     </div>
                     <div class="row">
                         <h5 class="summary-subtotal">€ 45.00</h5> <h5>+</h5> <h5 class="summary-delivery">€ 2.00</h5>
@@ -50,7 +50,7 @@
 <div class="container shopping-cart">
     <div class="row">
         <div class="col shopping-cart-container"></div>
-        <div class="col-3 d-none d-md-block p-0"> <!-- Summary fixed section-->
+        <div class="col-3 col-lg-3 d-none d-lg-block p-0"> <!-- Summary fixed section-->
             <div class="container bg-dark rounded-bobooky summary-container text-white text-center">
                 <div class="col h-75 mx-0 px-0">
                     <div class="row h-100 align-content-between justify-content-center">
@@ -77,7 +77,7 @@
                                 <div class="col-6"><h5>Total:</h5></div>
                                 <div class="col-6 title font-weight-bold summary-total">€ 45.00</div>
                             </div>
-                       </div>
+                        </div>
                     </div>
                 </div>
                 <div class="d-flex flex-column h-25">
