--- a/public/book/index.html
+++ b/public/book/index.html
@@ -18,11 +18,13 @@
 <!--
 Loading template
 -->
-<div class="loading d-flex flex-column justify-content-center text-dark">
-    <div class="text-center">
-        <h1 class="display-1">Loading..</h1>
+<div class="loading d-flex flex-column justify-content-center text-white bg-dark">
+    <div class="container text-center">
+        <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
+        <img class="mt-5" src="/assets/logo_white.png" alt="Bobooky">
     </div>
 </div>
+
 
 <div class="fixed-bottom vw-100 shadow d-block d-md-none">
     <div class="container-fluid">
