--- a/public/search/index.html
+++ b/public/search/index.html
@@ -18,13 +18,15 @@
 <body>
 <!--
 Loading template
-
-<div class="loading d-flex flex-column justify-content-center text-dark">
-    <div class="text-center">
-        <h1 class="display-1">Loading..</h1>
+-->
+<div class="loading d-flex flex-column justify-content-center text-white bg-dark">
+    <div class="container text-center">
+        <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
+        <img class="mt-5" src="/assets/logo_white.png" alt="Bobooky">
+        <h6 class="text-white mt-5">Searching more than 700 books..</h6>
     </div>
 </div>
--->
+
 
 <div class="nav-placeholder"></div>
 <nav aria-label="breadcrumb" class="bg-pink text-white">
@@ -38,22 +40,30 @@ Loading template
 </nav>
 <div class="section search mt-5">
     <div class="container">
-        <div class="row">
-            <div class="col-12 col-xl-6">
-                <input type="search" class="form-control form-control-lg rounded-pill" placeholder="Search..">
+        <form class="search-form">
+            <div class="row">
+                <div class="col-12 col-xl-6">
+                    <input type="search" name="q" value="" class="form-control form-control-lg rounded-pill search-bar" placeholder="Search..">
+                </div>
+                <div class="col-12 col-xl-6 d-flex justify-content-between mt-3 mt-xl-0">
+                    <select name="orderby" class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white mr-3 filter orderby">
+                        <option selected value="default">order by</option>
+                        <option value="price">price</option>
+                        <option value="author">author</option>
+                        <option value="name">name</option>
+                        <option value="year">year</option>
+
+                    </select>
+                    <select name="genre" class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white mx-3 filter genre">
+                        <option selected value="default">genre</option>
+                    </select>
+                    <select name="theme" class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white ml-3 filter theme">
+                        <option selected value="default">theme</option>
+                    </select>
+                </div>
             </div>
-            <div class="col-12 col-xl-6 d-flex justify-content-between mt-3 mt-xl-0">
-                <select class="custom-select custom-select-lg bg-dark rounded-pill text-white mr-3">
-                    <option selected>order by</option>
-                </select>
-                <select class="custom-select custom-select-lg bg-dark rounded-pill text-white mx-3">
-                    <option selected>order by</option>
-                </select>
-                <select class="custom-select custom-select-lg bg-dark rounded-pill text-white ml-3">
-                    <option selected>order by</option>
-                </select>
-            </div>
-        </div>
+            <button type="submit" class="d-none"></button>
+        </form>
     </div>
 </div>
 <div class="section authors mt-5">
