--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,42 @@
 </div>
 <div class="container whatsnew my-5">
 </div>
+
+<div class="container-fluid bg-dark py-4">
+    <div class="container">
+        <h3 class="text-white py-3">How do you feel today?</h3>
+        <div class="row">
+            <div class="col-12 col-sm-4 text-center px-3">
+                <button class="btn w-100 btn-danger text-white font-weight-bold rounded-pill my-3">Romantic</button>
+            </div>
+            <div class="col-12 col-sm-4 text-center px-3">
+                <button class="btn w-100 btn-orange text-white font-weight-bold rounded-pill my-3">Detective</button>
+            </div>
+            <div class="col-12 col-sm-4 text-center px-3">
+                <button class="btn w-100 btn-secondary text-white font-weight-bold rounded-pill my-3">Brave</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4 text-center px-3">
+                <button class="btn w-100 btn-purple text-white font-weight-bold rounded-pill my-3">Hero</button>
+            </div>
+            <div class="col-12 col-sm-4 text-center px-3">
+                <button class="btn w-100 btn-pink text-white font-weight-bold rounded-pill my-3">Sapient</button>
+            </div>
+            <div class="col-12 col-sm-4 text-center px-3">
+                <button class="btn w-100 btn-primary text-white font-weight-bold rounded-pill my-3">Magician</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container text-dark my-5">
     <h3>Some of our favourite books</h3>
 </div>
 <div class="container favourites my-5">
 </div>
+
+
 
 
 
