--- a/public/profile/order/index.html
+++ b/public/profile/order/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
+    <link rel="stylesheet" href="/profile/order/order.css">
 
 </head>
 
@@ -22,7 +23,6 @@
 </div>
 
 <div class="container order-container mt-5">
-
 </div>
 
 <script src="/lib/jquery/dist/jquery.js"></script>
