Working on homepage + more.

--- a/public/book/index.html
+++ b/public/book/index.html
@@ -32,7 +32,7 @@ Loading template
             <div class="col">
                 <div class="row py-3">
                     <div class="col d-flex flex-column justify-content-center">
-                        <h3 class="m-0 p-0"><span class="book-price font-weight-bold">00,00</span> €</h3>
+                        <h4 class="m-0 p-0"><span class="book-price font-weight-bold">00,00</span> €</h4>
                     </div>
                     <div class="col-auto">
                         <div class="input-group input-group-lg">
@@ -49,7 +49,7 @@ Loading template
                                 <button class="btn btn-pink cart-add" type="button">Add</button>
                             </div>
                             <div class="input-group-append">
-                                <button class="d-inline btn rounded-circle btn-outline-pink btn-sm wishlist" type="button">
+                                <button class="d-inline btn btn-outline-pink btn-sm wishlist" type="button">
                                     <i class="fa fa-heart-o"></i>
                                 </button>
                             </div>
@@ -76,13 +76,13 @@ Loading template
         <div class="row">
             <div class="col-12 d-block d-md-none">
                 <div>
-                    <h1 class="text-dark book-title">Book title</h1>
+                    <h2 class="text-dark book-title">Book title</h2>
                 </div>
                 <div>
                     <a href="#" class="book-author-href text-decoration-none">
-                        <h3 class="text-pink book-author text-capitalize">
+                        <h4 class="text-pink book-author text-capitalize">
                             Author name
-                        </h3>
+                        </h4>
                     </a>
                 </div>
                 <div class="text-gray book-genres text-capitalize mt-4">
@@ -192,13 +192,13 @@ Loading template
             </div>
             <div class="col-12 col-md-9 d-none d-md-block px-5">
                 <div>
-                    <h1 class="text-dark book-title text-capitalize">Book title</h1>
+                    <h2 class="text-dark book-title text-capitalize">Book title</h2>
                 </div>
                 <div>
                     <a href="#" class="book-author-href text-decoration-none">
-                        <h3 class="text-pink book-author text-capitalize">
+                        <h4 class="text-pink book-author text-capitalize">
                             Author name
-                        </h3>
+                        </h4>
                     </a>                </div>
                 <div class="text-gray book-genres mt-4 text-capitalize">
                     Horror / Fantasy
@@ -211,7 +211,7 @@ Loading template
                 </div>
                 <div class="mt-4 d-flex justify-content-start" style="height: 3rem">
                     <div class="text-dark font-weight-bold d-flex flex-column justify-content-center h-100">
-                        <h3 class="mt-2"><span class="book-price">00,00</span> €</h3>
+                        <h4 class="mt-2"><span class="book-price">00,00</span> €</h4>
                     </div>
                     <div class="text-dark font-weight-bold d-flex flex-column justify-content-center ml-5 h-100">
                         <div class="input-group input-group-sm">
@@ -334,7 +334,7 @@ Loading template
     <div class="book-reviews bg-dark vh-100">
         <div class="container text-white">
 
-            <h3 class="d-inline">Reviews (<span class="book-rating-qty">0</span>)</h3>
+            <h4 class="d-inline">Reviews (<span class="book-rating-qty">0</span>)</h4>
             <div class="text-pink ml-4 book-rating d-inline"></div>
 
             <div class="book-reviews-container d-flex flex-column justify-content-start mt-5">
