--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
     <link rel="stylesheet" href="/index.css">
-    <link rel="stylesheet" href="/components/carousel/carousel-five.css">
-    <link rel="stylesheet" href="/components/carousel/items/book.css">
 </head>
 
 <body>
@@ -23,42 +21,319 @@
         <div class="row justify-content-center">
             <div class="col-lg-8 col-md-10 text-white">
                 <h3>What are you looking for?</h3>
-                <div class=" form-group border-white mt-3 search-bar">
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="search-query form-control pl-4 text-light"
-                               placeholder="Search more than 700 books">
-                        <div class="input-group-append">
-                            <button class="btn search-button round btn-outline-dark" type="button">
-                                <i class="fa fa-search text-white"></i>
-                            </button>
+                <form action="/search" method="get">
+                    <div class="form-group border-white mt-3 search-bar">
+                        <div class="input-group">
+                            <input type="text" name="q" class="search-query form-control pl-4 text-light border-right-0"
+                                   placeholder="Search more than 700 books">
+                            <div class="input-group-append ">
+                                <button class="btn search-button round border-left-0 pr-4" type="button">
+                                    <i class="fa fa-2x fa-search text-white border-0"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
+                    <input type="submit" class="d-none">
+                </form>
             </div>
         </div>
     </div>
     <div class="row align-self-center">
-        <a href="#latest" class="fa fa-chevron-down text-white text-decoration-none"></a>
+        <a href="#scroll-to" class="fa fa-chevron-down text-white text-decoration-none"></a>
     </div>
 </div>
 
-<div class="container text-dark my-5">
-    <h3>What's new</h3>
-</div>
-<div class="container whatsnew my-5">
-</div>
-<div class="container text-dark my-5">
-    <h3>Some of our favourite books</h3>
-</div>
-<div class="container favourites my-5">
+<!-- DO NOT EDIT ME -->
+<div class="whats-new">
+    <div class="container text-dark my-5" id="scroll-to">
+        <h3>What's new</h3>
+    </div>
+    <div class="container my-5">
+        <div class="row">
+            <div class="col my-3">
+                <a href="author/?id=260" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1452349399l/26721568.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>The Problem with Forever</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Jennifer L. Armentrout</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=4289" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1443190440l/26109394.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>Fool Me Once</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Harlan Coben</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=9539" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1444838367l/26236956.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>The Obsession</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Nora Roberts</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=5486" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1478699350l/28077464.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>Night School</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Lee Child</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=6876" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1468057481l/28587957.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>Small Great Things</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Jodi Picoult</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 
+<!-- EDIT ME -->
+<div class="best-seller">
+    <div class="container text-dark my-5">
+        <h3>Best sellers</h3>
+    </div>
+    <div class="container my-5">
+        <div class="row">
+            <div class="col my-3">
+                <a href="author/?id=260" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1452349399l/26721568.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>The Problem with Forever</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Jennifer L. Armentrout</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=4289" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1443190440l/26109394.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>Fool Me Once</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Harlan Coben</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=9539" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1444838367l/26236956.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>The Obsession</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Nora Roberts</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=5486" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1478699350l/28077464.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>Night School</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Lee Child</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=6876" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1468057481l/28587957.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>Small Great Things</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Jodi Picoult</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 
+<!-- I AM THE SEPARATOR, EDIT ME IF YOU WISH TO -->
+<div class="container-fluid  genres-container bg-dark text-white">
+    <div class="container py-4">
+        <h3>How do you feel today?</h3>
+        <div class="d-flex justify-content-between mt-4">
+            <div class="w-100">
+                <a href="#" class="btn btn-lg btn-danger rounded-pill w-100">romantic</a>
+            </div>
+            <div class="w-100 mx-5">
+                <a href="#" class="btn btn-lg btn-warning rounded-pill w-100">detective</a>
+            </div>
+            <div class="w-100">
+                <a href="#" class="btn btn-lg btn-pink rounded-pill w-100">dreamer</a>
+            </div>
+        </div>
+        <div class="d-flex justify-content-between mt-4">
+            <div class="w-100">
+                <a href="#" class="btn btn-lg btn-danger rounded-pill w-100">romantic</a>
+            </div>
+            <div class="w-100 mx-5">
+                <a href="#" class="btn btn-lg btn-danger rounded-pill w-100">romantic</a>
+            </div>
+            <div class="w-100">
+                <a href="#" class="btn btn-lg btn-danger rounded-pill w-100">romantic</a>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<!-- EDIT ME -->
+<div class="fav-readings">
+    <div class="container text-dark my-5">
+        <h3>Our favourite readings</h3>
+    </div>
+    <div class="container my-5">
+        <div class="row">
+            <div class="col my-3">
+                <a href="author/?id=260" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1452349399l/26721568.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>The Problem with Forever</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Jennifer L. Armentrout</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=4289" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1443190440l/26109394.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>Fool Me Once</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Harlan Coben</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=9539" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1444838367l/26236956.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>The Obsession</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Nora Roberts</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=5486" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1478699350l/28077464.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>Night School</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Lee Child</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col my-3">
+                <a href="author/?id=6876" class="text-decoration-none text-dark">
+                    <div class="book">
+                        <div class="d-flex justify-content-center ">
+                            <img class="image " src="https://images.gr-assets.com/books/1468057481l/28587957.jpg">
+                        </div>
+                        <div class="title text-center text-capitalize mt-3">
+                            <h5>Small Great Things</h5>
+                        </div>
+                        <div class="author text-center text-capitalize mt-n2">
+                            <p>Jodi Picoult</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
-<script src="lib/multislider/multislider.js"></script>
 <script src="/index.js" type="module"></script>
 
 
