--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,12 @@
         </div>
     </div>
     <div class="row align-self-center">
-        <a href="#scroll-to" class="fa fa-chevron-down text-white text-decoration-none"></a>
+        <a href="#whats-new" class="fa fa-chevron-down text-white text-decoration-none"></a>
     </div>
 </div>
 
 <!-- LATEST -->
-<div class="whats-new">
+<div class="whats-new" id="whats-new">
     <div class="container">
         <div class="container text-dark my-5">
             <div class="row align-items-baseline">
